--- a/index.html
+++ b/index.html
@@ -106,19 +106,50 @@
         .card a:hover {
             background: #0056b3;
         }
+        /* אנימציית טעינה טכנולוגית חדשה */
         #loader {
             display: none;
             margin: 20px auto;
-            width: 50px;
-            height: 50px;
-            border: 5px solid #f3f3f3;
-            border-top: 5px solid #007bff;
+            position: relative;
+            width: 80px;
+            height: 80px;
+        }
+        .loader-circle {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            border: 4px solid transparent;
+            border-top: 4px solid #007bff;
             border-radius: 50%;
-            animation: spin 1s linear infinite;
+            animation: spin 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+        }
+        .loader-circle:nth-child(2) {
+            border-top-color: #00c4ff;
+            animation-delay: -0.4s;
+            transform: scale(0.85);
+        }
+        .loader-circle:nth-child(3) {
+            border-top-color: #1e3c72;
+            animation-delay: -0.8s;
+            transform: scale(0.7);
+        }
+        .loader-text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 14px;
+            color: #007bff;
+            animation: pulseText 1.5s infinite;
         }
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
+        }
+        @keyframes pulseText {
+            0% { opacity: 0.5; transform: translate(-50%, -50%) scale(1); }
+            50% { opacity: 1; transform: translate(-50%, -50%) scale(1.1); }
+            100% { opacity: 0.5; transform: translate(-50%, -50%) scale(1); }
         }
         @keyframes slideIn {
             from { opacity: 0; transform: translateY(20px); }
@@ -155,7 +186,13 @@
             <div id="suggestions" class="suggestions"></div>
         </div>
         <button onclick="lookupModel()">🔍 חפש</button>
-        <div id="loader"></div>
+        <button onclick="suggestRandomModel()" style="background: linear-gradient(90deg, #28a745, #00ff7f); margin-top: 10px;">🎲 הצע דגם אקראי</button>
+        <div id="loader">
+            <div class="loader-circle"></div>
+            <div class="loader-circle"></div>
+            <div class="loader-circle"></div>
+            <span class="loader-text">טוען...</span>
+        </div>
         <div id="result"></div>
     </div>
 
@@ -276,6 +313,12 @@
             }, 1000); // סימולציית טעינה של שנייה
         }
 
+        function suggestRandomModel() {
+            const randomModel = sampleModels[Math.floor(Math.random() * sampleModels.length)];
+            document.getElementById("modelInput").value = randomModel;
+            lookupModel();
+        }
+
         function getModelDetails(model) {
             if (/^R[FSBTL]/.test(model)) {
                 return getFridgeDetails(model);
@@ -347,7 +390,6 @@
             let year = 'לא ידוע';
             let yearIndex = -1;
 
-            // זיהוי שנה דינמי, כולל תיקון ל-The Frame
             for (let i = 4; i < model.length - (isFrame && model.length <= 10 ? 0 : 2); i++) {
                 if (yearCodes[model[i]]) {
                     year = yearCodes[model[i]];
