--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>בדיקת מוצר סמסונג</title>
     <style>
         body {
-            font-family: 'Inter', Arial, sans-serif; /* פונט מודרני ומקצועי כמו שמשתמשים בחברות טכנולוגיה */
+            font-family: 'Rubik', Arial, sans-serif; /* שינוי ל-Rubik */
             text-align: center;
-            background: linear-gradient(135deg, #0d1b2a, #1b263b); /* כחול כהה עמוק ומרשים */
+            background: linear-gradient(135deg, #0d1b2a, #1b263b);
             padding: 40px;
             margin: 0;
             min-height: 100vh;
             overflow-x: hidden;
-            color: #e0e1dd; /* צבע טקסט בהיר ונקי */
+            color: #e0e1dd;
         }
         .container {
             background: rgba(255, 255, 255, 0.98);
@@ -23,11 +23,11 @@
             max-width: 650px;
             margin: 0 auto 20px;
             text-align: center;
-            border: 1px solid rgba(69, 123, 157, 0.5); /* כחול קריר ומעודן */
+            border: 1px solid rgba(69, 123, 157, 0.5);
             backdrop-filter: blur(8px);
         }
         h2 {
-            color: #1b263b; /* כחול כהה אלגנטי */
+            color: #1b263b;
             margin-bottom: 25px;
             font-weight: 600;
             text-transform: uppercase;
@@ -38,24 +38,24 @@
             width: calc(100% - 24px);
             padding: 14px;
             margin-top: 15px;
-            border: 2px solid #457b9d; /* כחול בינוני מרשים */
+            border: 2px solid #457b9d;
             border-radius: 8px;
             font-size: 16px;
             text-align: center;
             background: #f7f9fb;
             transition: border-color 0.3s, box-shadow 0.3s;
-            font-family: 'Inter', sans-serif;
+            font-family: 'Rubik', sans-serif;
         }
         input:focus {
             outline: none;
-            border-color: #1d3557; /* כחול כהה עמוק */
+            border-color: #1d3557;
             box-shadow: 0 0 12px rgba(29, 53, 87, 0.5);
         }
         button {
             width: 100%;
             padding: 14px;
             margin-top: 20px;
-            background: linear-gradient(90deg, #457b9d, #a8dadc); /* גרדיאנט כחול קריר ואלגנטי */
+            background: linear-gradient(90deg, #457b9d, #a8dadc);
             color: #ffffff;
             border: none;
             border-radius: 8px;
@@ -63,7 +63,7 @@
             font-weight: 600;
             cursor: pointer;
             transition: transform 0.2s, box-shadow 0.3s;
-            font-family: 'Inter', sans-serif;
+            font-family: 'Rubik', sans-serif;
         }
         button:hover {
             transform: translateY(-2px);
@@ -79,14 +79,14 @@
             margin-right: auto;
         }
         .card {
-            background: linear-gradient(135deg, #ffffff, #edf2f4); /* גרדיאנט עדין ורשמי */
+            background: linear-gradient(135deg, #ffffff, #edf2f4);
             padding: 25px;
             border-radius: 12px;
             box-shadow: 0 6px 25px rgba(0, 0, 0, 0.2);
             animation: slideIn 0.5s ease-in-out;
             overflow: hidden;
             text-align: right;
-            color: #1b263b; /* טקסט כחול כהה למראה רשמי */
+            color: #1b263b;
             font-size: 16px;
             line-height: 1.6;
         }
@@ -104,7 +104,7 @@
             display: block;
             margin: 20px auto 0;
             padding: 10px 25px;
-            background: #1d3557; /* כחול כהה עמוק */
+            background: #1d3557;
             color: #ffffff;
             text-decoration: none;
             border-radius: 8px;
@@ -113,9 +113,8 @@
             font-weight: 500;
         }
         .card a:hover {
-            background: #457b9d; /* כחול בינוני */
+            background: #457b9d;
         }
-        /* אנימציית טעינה טכנולוגית */
         #loader {
             display: none;
             margin: 20px auto;
@@ -189,7 +188,7 @@
             background: #edf2f4;
         }
     </style>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -431,8 +430,7 @@
                     countryNote = ' - יבוא מקביל';
                 }
             } else if (model.length === 10 || model.length === 12) {
-                country = 'לא מצוין';
-                countryNote = ' - יבוא מקביל';
+                country = 'לא צוין'; // שינוי ל"לא צוין" בלבד
             }
             if (model[1] === 'A') {
                 countryNote = ' - יבוא מקביל';
