--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>בדיקת מוצר סמסונג</title>
+    <title>הזן קוד דגם</title>
     <style>
         body {
-            font-family: 'Rubik', Arial, sans-serif; /* שינוי ל-Rubik */
+            font-family: 'Rubik', Arial, sans-serif;
             text-align: center;
             background: linear-gradient(135deg, #0d1b2a, #1b263b);
             padding: 40px;
@@ -187,12 +187,49 @@
         .suggestion-item:hover {
             background: #edf2f4;
         }
+        /* תפריט ניווט */
+        .navbar {
+            background: rgba(29, 53, 87, 0.95);
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+            margin-bottom: 20px;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+        .navbar a {
+            color: #e0e1dd;
+            text-decoration: none;
+            font-size: 16px;
+            font-weight: 500;
+            padding: 8px 16px;
+            border-radius: 5px;
+            transition: background 0.3s, color 0.3s;
+        }
+        .navbar a:hover, .navbar a.active {
+            background: #457b9d;
+            color: #ffffff;
+        }
+        /* תוכן דינמי */
+        .content {
+            display: none;
+        }
+        .content.active {
+            display: block;
+        }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <h2>בדיקת מוצר סמסונג</h2>
+    <div class="navbar">
+        <a href="#" onclick="showPage('model')" class="active">חיפוש לפי קוד דגם</a>
+        <a href="#" onclick="showPage('serial')">בדיקה לפי מספר סיריאלי</a>
+    </div>
+
+    <!-- חיפוש לפי קוד דגם -->
+    <div id="model-page" class="container content active">
+        <h2>הזן קוד דגם</h2>
         <div style="position: relative;">
             <input type="text" id="modelInput" placeholder="הכנס קוד דגם" oninput="showSuggestions(this.value)">
             <div id="suggestions" class="suggestions"></div>
@@ -208,7 +245,30 @@
         <div id="result"></div>
     </div>
 
+    <!-- בדיקה לפי מספר סיריאלי -->
+    <div id="serial-page" class="container content">
+        <h2>בדיקת מוצר לפי מספר סיריאלי</h2>
+        <input type="text" id="serialInput" placeholder="הכנס מספר סיריאלי">
+        <button onclick="lookupSerial()">חפש</button>
+        <div id="loader-serial">
+            <div class="loader-circle"></div>
+            <div class="loader-circle"></div>
+            <div class="loader-circle"></div>
+            <span class="loader-text">טוען...</span>
+        </div>
+        <div id="serial-result"></div>
+    </div>
+
     <script>
+        // תפריט ניווט
+        function showPage(pageId) {
+            document.querySelectorAll('.content').forEach(page => page.classList.remove('active'));
+            document.querySelectorAll('.navbar a').forEach(link => link.classList.remove('active'));
+            document.getElementById(pageId + '-page').classList.add('active');
+            document.querySelector(`a[onclick="showPage('${pageId}')"]`).classList.add('active');
+        }
+
+        // קוד לחיפוש לפי קוד דגם
         const fridgeConfig = {
             'F': 'French Door (דלת צרפתית)', 'S': 'Side by Side (דלת ליד דלת)', 'T': 'Top Freezer (מקפיא עליון)',
             'B': 'Bottom Freezer (מקפיא תחתון)', 'L': 'Bottom Freezer (מקפיא תחתון)'
@@ -430,7 +490,7 @@
                     countryNote = ' - יבוא מקביל';
                 }
             } else if (model.length === 10 || model.length === 12) {
-                country = 'לא צוין'; // שינוי ל"לא צוין" בלבד
+                country = 'לא צוין';
             }
             if (model[1] === 'A') {
                 countryNote = ' - יבוא מקביל';
@@ -450,6 +510,69 @@
                         ${image ? `<img src="${image}" alt="${display}">` : ''}
                         <a href="https://www.samsung.com/il/search/?searchvalue=${model}" target="_blank">עבור לדגם באתר סמסונג</a>
                     </div>`;
+        }
+
+        // קוד לבדיקה לפי מספר סיריאלי
+        function lookupSerial() {
+            var serial = document.getElementById("serialInput").value.trim();
+            var resultDiv = document.getElementById("serial-result");
+            var loader = document.getElementById("loader-serial");
+
+            if (serial.length !== 11 && serial.length !== 15) {
+                resultDiv.innerHTML = '<div class="card">שגיאה: מספר סיריאלי שגוי, אנא בדוק והזן שוב.</div>';
+                resultDiv.style.display = "block";
+                return;
+            }
+
+            loader.style.display = "block";
+            resultDiv.style.display = "none";
+
+            setTimeout(() => {
+                var yearCode, monthCode;
+                if (serial.length === 15) {
+                    yearCode = serial[7];
+                    monthCode = serial[8];
+                } else if (serial.length === 11) {
+                    yearCode = serial[3];
+                    monthCode = serial[4];
+                }
+
+                var yearMap = {
+                    'F': 2014, 'G': 2015, 'H': 2016, 'J': 2017,
+                    'K': 2018, 'M': 2019, 'N': 2020, 'R': 2021,
+                    'T': 2022, 'W': 2023, 'X': 2024, 'Y': 2025
+                };
+
+                var monthMap = {
+                    '1': 'ינואר', '2': 'פברואר', '3': 'מרץ', '4': 'אפריל', '5': 'מאי',
+                    '6': 'יוני', '7': 'יולי', '8': 'אוגוסט', 'A': 'אוקטובר', 'B': 'נובמבר', 'C': 'דצמבר'
+                };
+
+                var productionYear = yearMap[yearCode] || "לא ידוע";
+                var productionMonth = monthMap[monthCode] || "לא ידוע";
+
+                var warrantyStatus;
+                if (productionYear < 2024 || (productionYear === 2024 && monthCode < '3')) {
+                    warrantyStatus = "לא באחריות";
+                } else if (productionYear === 2024 && monthCode >= '3' && monthCode <= 'B') {
+                    warrantyStatus = "באחריות סמליין";
+                } else if (productionYear > 2024 || (productionYear === 2024 && monthCode === 'C' && serial.includes("XC"))) {
+                    warrantyStatus = "באחריות סמסונג";
+                } else {
+                    warrantyStatus = "לא ידוע";
+                }
+
+                var dvbSupport = (productionYear >= 2018) ? "תומך DVB-T2" : "תומך DVB-T1";
+
+                resultDiv.innerHTML = `<div class="card">
+                                        שנת ייצור: ${productionYear}<br>
+                                        חודש ייצור: ${productionMonth}<br>
+                                        סטטוס אחריות: ${warrantyStatus}<br>
+                                        תמיכת שידור: ${dvbSupport}
+                                    </div>`;
+                resultDiv.style.display = "block";
+                loader.style.display = "none";
+            }, 1000);
         }
     </script>
 </body>
