--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             transform: translateY(-2px);
             box-shadow: 0 6px 20px rgba(69, 123, 157, 0.6);
         }
-        #result {
+        #result, #serial-result {
             margin-top: 30px;
             display: none;
             text-align: center;
@@ -115,7 +115,7 @@
         .card a:hover {
             background: #457b9d;
         }
-        #loader {
+        #loader, #loader-serial {
             display: none;
             margin: 20px auto;
             position: relative;
@@ -187,7 +187,6 @@
         .suggestion-item:hover {
             background: #edf2f4;
         }
-        /* תפריט ניווט */
         .navbar {
             background: rgba(29, 53, 87, 0.95);
             padding: 15px;
@@ -211,7 +210,6 @@
             background: #457b9d;
             color: #ffffff;
         }
-        /* תוכן דינמי */
         .content {
             display: none;
         }
@@ -227,7 +225,6 @@
         <a href="#" onclick="showPage('serial')">בדיקה לפי מספר סיריאלי</a>
     </div>
 
-    <!-- חיפוש לפי קוד דגם -->
     <div id="model-page" class="container content active">
         <h2>הזן קוד דגם</h2>
         <div style="position: relative;">
@@ -245,7 +242,6 @@
         <div id="result"></div>
     </div>
 
-    <!-- בדיקה לפי מספר סיריאלי -->
     <div id="serial-page" class="container content">
         <h2>בדיקת מוצר לפי מספר סיריאלי</h2>
         <input type="text" id="serialInput" placeholder="הכנס מספר סיריאלי">
@@ -260,7 +256,6 @@
     </div>
 
     <script>
-        // תפריט ניווט
         function showPage(pageId) {
             document.querySelectorAll('.content').forEach(page => page.classList.remove('active'));
             document.querySelectorAll('.navbar a').forEach(link => link.classList.remove('active'));
@@ -268,7 +263,6 @@
             document.querySelector(`a[onclick="showPage('${pageId}')"]`).classList.add('active');
         }
 
-        // קוד לחיפוש לפי קוד דגם
         const fridgeConfig = {
             'F': 'French Door (דלת צרפתית)', 'S': 'Side by Side (דלת ליד דלת)', 'T': 'Top Freezer (מקפיא עליון)',
             'B': 'Bottom Freezer (מקפיא תחתון)', 'L': 'Bottom Freezer (מקפיא תחתון)'
@@ -512,14 +506,13 @@
                     </div>`;
         }
 
-        // קוד לבדיקה לפי מספר סיריאלי
         function lookupSerial() {
             var serial = document.getElementById("serialInput").value.trim();
-            var resultDiv = document.getElementById("serial-result");
-            var loader = document.getElementById("loader-serial");
+            var resultDiv = document.getElementById("serial-result"); // תיקון ל-serial-result
+            var loader = document.getElementById("loader-serial"); // תיקון ל-loader-serial
 
-            if (serial.length !== 11 && serial.length !== 15) {
-                resultDiv.innerHTML = '<div class="card">שגיאה: מספר סיריאלי שגוי, אנא בדוק והזן שוב.</div>';
+            if (!serial || (serial.length !== 11 && serial.length !== 15)) { // תיקון תנאי לבדיקת אורך
+                resultDiv.innerHTML = '<div class="card">שגיאה: מספר סיריאלי שגוי, אנא בדוק והזן שוב (11 או 15 תווים).</div>';
                 resultDiv.style.display = "block";
                 return;
             }
